fix: shift location of the Tumblr border.

--- a/src/app/components/tag/tumblr-tags/tumblr-tags.component.scss
+++ b/src/app/components/tag/tumblr-tags/tumblr-tags.component.scss
@@ -45,8 +45,6 @@ $max-post-width: 400px;
                 padding-top: 0;
 
                 .tag-stats {
-                    border: 1px solid $light-text-color;
-                    margin-top: $large-spacing;
                     padding: 0;
                 }
             }
@@ -68,6 +66,11 @@ $max-post-width: 400px;
         max-height: $scroll-section-height;
         overflow-y: scroll;
         overflow-x: hidden;
+
+        .tag-stats {
+            border: 1px solid $light-text-color;
+            margin-top: $large-spacing;
+        }
 
         .posts {
             @include flex-col($justify-content: center);
